<resources>
    <string name="app_name">TruyenQQ</string>
    <string name="lbHome">Trang Chủ</string>
    <string name="lbCategory">Thể Loại</string>
    <string name="lbBookShelf">Tủ Sách</string>
    <string name="lbSearch">Tìm Kiếm</string>
    <string name="lbUser">Cá Nhân</string>
    <string name="sex">Giới tính:</string>
    <string name="lbMale">Nam</string>
    <string name="lbFemale">Nữ</string>
    <string name="lbOldPassWord">Mật khẩu hiện tại</string>
    <string name="lbNewPassWord">Mật khẩu mới</string>
    <string name="lbChangePassword">Thay đổi mật khẩu</string>
    <string name="lbNewPassWordConfirm">Nhập lại mật khẩu mới</string>
    <string name="lbSaveChange">LƯU THAY ĐỔI</string>
    <string name="lbLoginRequired">Vui lòng đăng nhập để sử dụng chức năng này</string>
    <string name="lbLogout">Đăng xuất</string>
    <string name="lbInfor">Thông tin cá nhân</string>
    <string name="lbNotif">Thông Báo</string>
    <string name="lbType">Nhập tên bạn muốn tìm</string>
    <string name="lbRank">Xếp Hạng</string>

    <string name="lbInfoCategory">Đối tượng hướng tới của thể loại này là phái nam. Nội dung của những bộ manga này
        thường liên quan đến đánh nhau và/hoặc bạo lực (ở mức bình thường, không thái quá)
    </string>

    <string name="lbLoginText">Vui lòng đăng nhập tài khoản của bạn để tiếp tục sử dụng dịch vụ</string>
    <string name="lbEmail"> Nhập Email</string>
    <string name="lbPass">Nhập mật khẩu</string>
    <string name="lbLogin">Đăng nhập</string>
    <string name="lbForgotPass">Quên mật khẩu</string>
    <string name="lbRegister">Đăng kí tài khoản mới</string>
    <string name="lbKind">Thể loại</string>
    <string name="lbCalendar">Lịch</string>
    <string name="lbNewStory">Truyện mới</string>
    <string name="lbDiscuss">Thảo luận</string>
    <string name="lbNewStoryUpdate">Truyện mới cập nhật</string>
    <string name="lbMoreItem">Xem thêm</string>
    <string name="lbStoryMale">Truyện con trai</string>
    <string name="lbStoryFemale">Truyện con gái</string>
    <string name="lbRule">Truyện được lấy từ TruyenQQ.com. Phần mềm chỉ lưu hành nội bộ và không chịu trách nhiệm bàn         quyền sàn phẩm.</string>
    <string name="lbButtonForgotPassWord">Lấy lại mật khẩu</string>
    <string name="lbForgotText">Vui lòng nhập email để tiếp tục</string>
    <string name="lbRegisterRequire">Vui lòng điền đủ thông tin để đăng kí</string>
    <string name="lbPassword">Mật khẩu</string>
    <string name="lbRegisterSend">Đăng ký</string>
    <string name="lbDelete">Xóa</string>
    <string name="lbDownloadName">Chọn chương</string>
    <string name="lbSeteclAll">Chọn tất cả</string>
    <string name="lbDownload">Tải xuống</string>
    <string name="lbWriteAny">Viết gì đó</string>
    <string name="lbReadNow">Đọc ngay</string>
    <string name="lbHistory">Lịch sử</string>
</resources>
