<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvBackDownload"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:drawableTop="@drawable/ic_before"
        android:paddingTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/lbDownloadName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tvBackDownload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvBackDownload" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvDownload"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/botNavigationDownload"
        app:layout_constraintTop_toBottomOf="@+id/tvBackDownload" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botNavigationDownload"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <Button
                android:id="@+id/btnSelectAll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/lbSeteclAll"
                app:layout_constraintEnd_toStartOf="@id/btnDownload"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnDownload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/lbDownload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnSelectAll" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>