<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border_info_account"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgAvatarUser">

        <TextView
            android:id="@+id/tvInformation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_infor_person"
            android:drawablePadding="15dp"
            android:onClick="changeInfor"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/lbInfor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_notification"
            android:drawablePadding="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/lbNotif"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInformation" />

        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_change_password"
            android:drawablePadding="15dp"
            android:onClick="changePassWord"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/lbChangePassword"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNotification" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/tvLogout"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:elevation="7dp"
        android:onClick="logOut"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="@id/layoutCon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCon"
        app:siRadius="30dp" />

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/imgAvatarUser"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:elevation="4dp"
        android:src="@drawable/ic_nouser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:siRadius="70dp" />

    <TextView
        android:elevation="7dp"
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatarUser" />
</androidx.constraintlayout.widget.ConstraintLayout>