<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvPreviousInfo"
        android:drawableStart="@drawable/ic_before"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/tvInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvPreviousInfo"
        app:layout_constraintBottom_toBottomOf="@id/tvPreviousInfo"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="Thông tin cá nhân"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/imgAvatar"
        android:src="@drawable/ic_nouser"
        android:layout_marginTop="70dp"
        app:siRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <EditText
        android:id="@+id/edtLastName"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar"
        android:drawableStart="@drawable/ic_infor_person"
        android:hint="Họ"
        android:textSize="17dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@id/edtLastName"
        android:drawableStart="@drawable/ic_infor_person"
        android:hint="Tên"
        android:textSize="17dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtPhone"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        android:drawableStart="@drawable/ic_phone"
        android:hint="Số điện thoại"
        android:textSize="17dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtMail"
        app:layout_constraintTop_toBottomOf="@id/edtPhone"
        android:drawableStart="@drawable/ic_email_cycle"
        android:hint="Email"
        android:textSize="17dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtBirthDate"
        app:layout_constraintTop_toBottomOf="@id/edtMail"
        android:drawableStart="@drawable/ic_birthday"
        android:hint="dd-MM-yyyy"
        android:textSize="17dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/lbSex"
        android:text="@string/sex"
        android:textSize="22dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/lbSex"
        app:layout_constraintStart_toEndOf="@id/lbSex"
        app:layout_constraintBottom_toBottomOf="@id/lbSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/checkboxMale"
        android:text="@string/lbMale"
        android:layout_marginLeft="10dp"
        android:textSize="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/checkboxFemale"
        android:text="@string/lbFemale"
        android:layout_marginLeft="10dp"
        android:textSize="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RadioGroup>
    
    <Button
        android:id="@+id/btn_save_info"
        android:text="LƯU THÔNG TIN"
        android:background="@drawable/border_color_button_radius"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>